--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@react-three/drei": "^9.109.2",
-    "@react-three/fiber": "^8.16.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.167.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/three": "^0.167.0",
-    "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
-  }
+    "name": "frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@mantine/core": "^7.11.2",
+        "@mantine/form": "^7.12.1",
+        "@mantine/hooks": "^7.11.2",
+        "@react-three/drei": "^9.109.2",
+        "@react-three/fiber": "^8.16.8",
+        "@tabler/icons-react": "^3.12.0",
+        "install": "^0.13.0",
+        "npm": "^10.8.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "three": "^0.167.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@types/three": "^0.167.0",
+        "@vitejs/plugin-react": "^2.0.1",
+        "typescript": "^4.6.4",
+        "vite": "^3.0.7"
+    }
 }
